AI version 2: Trading and auctioning functional